--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -14,6 +14,17 @@
       <p>Hello World! <strong>{{ boldmessage }}</strong></p>
       <p><a href="/rango/about/">About</a></p>
       <img src="{% static "rango.jpg" %}" alt="Picture of Rango" />
+
+      {% if categories %}
+        <ul>
+            {% for category in categories %}
+            <li>{{ category.name }} - Views: {{ category.views }} Likes: {{ category.likes }}</li>
+            {% endfor %}
+        <ul>
+      {% else %}
+        <strong>No categories at present.</strong>
+      {% endif %}
+
     </div><!-- /container -->
   </body>
 </html>
