Updated template, views, and urls ch6

--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -12,7 +12,9 @@
     <div class="container">
       <h1>Rango says...</h1>
       <p>This is the about page! <strong>{{ boldmessage }}</strong></p>
-      <p><a href="/rango/">Home</a></p>
+      <p>
+       <a class="btn btn-primary btn-lg" href="/rango/" role="button">Home</a>
+      </p>
       <img src="{% static "rango.jpg" %}" alt="Picture of Rango" />
     </div><!-- /container -->
   </body>
