--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -12,18 +12,38 @@
     <div class="container">
       <h1>Rango says...</h1>
       <p>Hello World! <strong>{{ boldmessage }}</strong></p>
-      <p><a href="/rango/about/">About</a></p>
+      <p>
+        <a class="btn btn-primary btn-lg active" href="/rango/about/" role="button">About</a>
+      </p>
       <img src="{% static "rango.jpg" %}" alt="Picture of Rango" />
 
-      {% if categories %}
-        <ul>
-            {% for category in categories %}
-            <li>{{ category.name }} - Views: {{ category.views }} Likes: {{ category.likes }}</li>
+      <div class="row">
+        <div class="col-md-6">
+          <h3>Categories:</h3>
+          {% if categories %}
+          <ul class="list-group">
+              {% for category in categories %}
+              <li class="list-group-item"><span class="badge">Views: {{ category.views }}</span><span class="badge">Likes: {{ category.likes }}</span><a href="/rango/category/{{ category.url }}">{{ category.name }}</a></li>
+              {% endfor %}
+          <ul>
+          {% else %}
+          <strong>No categories at present.</strong>
+          {% endif %}
+        </div>
+
+        <div class="col-md-6">
+          <h3>Pages:</h3>
+          {% if pages %}
+          <ul class="list-group">
+            {% for page in pages %}
+            <li class="list-group-item"><span class="badge">Views: {{ page.views }}</span><a href="{{ page.url }}">{{ page.title }}</a></li>
             {% endfor %}
-        <ul>
-      {% else %}
-        <strong>No categories at present.</strong>
-      {% endif %}
+          </ul>
+          {% else %}
+          <strong>No pages at present.</strong>
+          {% endif %}
+        </div>
+      </div><!-- /row -->
 
     </div><!-- /container -->
   </body>
