--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -24,6 +24,21 @@
       {% else %}
         The specified category {{ category_name }} does not exist!
       {% endif %}
-    </div>
+
+
+      <div class="row">
+        <div class="col-md-1">
+          <p>
+            <a class="btn btn-default btn-sm" href="/rango/category/{{ category_url }}/add_page/" role="button">Add Page</a>
+          </p>
+        </div>
+        <div class="col-md-1">
+          <p>
+            <a class="btn btn-default btn-sm" href="/rango/" role="button">Home</a>
+          </p>
+        </div>
+      </div><!-- /row -->
+
+    </div><!-- /container -->
   </body>
 </html>
