--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -20,6 +20,7 @@
       <div class="row">
         <div class="col-md-6">
           <h3>Categories:</h3>
+
           {% if categories %}
           <ul class="list-group">
               {% for category in categories %}
@@ -42,6 +43,14 @@
           {% else %}
           <strong>No pages at present.</strong>
           {% endif %}
+        </div>
+      </div><!-- /row -->
+
+      <div class="row">
+        <div class="col-md-6">
+          <p>
+            <a class="btn btn-default btn-sm" href="/rango/add_category/" role="button">Add Category</a>
+          </p>
         </div>
       </div><!-- /row -->
 
