--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -10,8 +10,19 @@
 
   <body>
     <div class="container">
+      {% if user.is_authenticated %}
+      <a class="btn btn-default btn-sm" href="/rango/logout/">Logout</a>
+      {% else %}
+      <a class="btn btn-default btn-sm" href="/rango/login/">Login</a>
+      <a class="btn btn-default btn-sm" href="/rango/register/">Register</a>
+      {% endif %}
+
       <h1>Rango says...</h1>
-      <p>Hello World! <strong>{{ boldmessage }}</strong></p>
+      {% if user.is_authenticated %}
+      <p>Hello {{ user.username }}! <strong>{{ boldmessage }}</strong></p>
+      {% else %}
+      <p>Hello world! <strong>{{ boldmessage }}</strong></p>
+      {% endif %}
       <p>
         <a class="btn btn-primary btn-lg active" href="/rango/about/" role="button">About</a>
       </p>
