Added base html and more templating

--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-{% load static %}
+{% extends 'rango/base.html' %}
 
-<html>
-  <head>
-    <title>Rango</title>
-    <link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
-    <script src="{% static "js/jquery.js" %}"></script>
-  </head>
+{% block title %}Add Category{% endblock %}
 
-  <body>
+{% block body_block %}
     <div class="container">
       <h1>Add Category:</h1>  
 
@@ -27,6 +21,6 @@
         <input type="submit" name="submit" value="Create Category" />
       </form>
     </div>
-    
-  </body>
+
+{% endblock %}
 </html>
