--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-{% load static %}
+{% extends 'rango/base.html' %}
 
-<html>
-  <head>
-    <title>Rango</title>
-    <link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
-    <script src="{% static "js/jquery.js" %}"></script>
-  </head>
+{% block title %}About{% endblock %}
 
-  <body>
+{% block body_block %}
     <div class="container">
       <h1>Rango says...</h1>
       <p>This is the about page! <strong>{{ boldmessage }}</strong></p>
@@ -16,5 +10,5 @@
        <a class="btn btn-primary btn-lg" href="/rango/" role="button">Home</a>
       </p>
     </div><!-- /container -->
-  </body>
+{% endblock %}
 </html>
