--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-{% load static %}
+{% extends 'rango/base.html' %}
 
-<html>
-  <head>
-    <title>Rango</title>
-    <link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
-    <script src="{% static "js/jquery.js" %}"></script>
-  </head>
+{% block title %}Add Page{% endblock %}
 
-  <body>
+{% block body_block %}
     <div class="container">
       <h1>Add Page:</h1>  
 
@@ -28,5 +22,5 @@
       </form>
     </div>
     
-  </body>
+{% endblock %}
 </html>
