--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-{% load static %}
+{% extends 'rango/base.html' %}
 
-<html>
-  <head>
-    <title>Rango</title>
-    <link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
-    <script src="{% static "js/jquery.js" %}"></script>
-  </head>
+{% block title %}{{ category_name }}{% endblock %}
 
-  <body>
+{% block body_block %}
     <div class="container">
       <h1>{{ category_name }}</h1>
       {% if category %}
@@ -40,5 +34,5 @@
       </div><!-- /row -->
 
     </div><!-- /container -->
-  </body>
+{% endblock %}
 </html>
