--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 {% load static %}
+{% block title %}How to Tango with Django!{% endblock %}
 
-<html>
-  <head>
-    <title>Rango</title>
-    <link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
-    <script src="{% static "js/jquery.js" %}"></script>
-  </head>
-
-  <body>
+{% block body_block %}
     <div class="container">
       {% if user.is_authenticated %}
       <a class="btn btn-default btn-sm" href="/rango/logout/">Logout</a>
@@ -66,5 +60,5 @@
       </div><!-- /row -->
 
     </div><!-- /container -->
-  </body>
+{% endblock %}
 </html>
